--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.0.4
 django-cors-headers==3.12.0
 djangorestframework==3.13.1
 Pillow==9.1.1
+python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
 tzdata==2022.1
